--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.5.3"
   },
   "devDependencies": {
