--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.5.3"
   },
   "devDependencies": {
