--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
