--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Um simples componente de login com email, senha e nome",
   "main": "index.js",
+  "enginers": {
+     "node": 18
+  }
   "scripts": {
     "start": "npx nodemon ./bin/server.js"
   },
