--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Um simples componente de login com email, senha e nome",
   "main": "index.js",
   "enginers": {
-     "node": 18
+     "node": "18"
   }
   "scripts": {
     "start": "npx nodemon ./bin/server.js"
