--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Um simples componente de login com email, senha e nome",
   "main": "index.js",
   "engines": {
-     "node": "18.18"
+    "node": "18.18"
   },
   "scripts": {
-    "start": "npx nodemon ./bin/server.js"
+    "start": "npx nodemon ./bin/server.js",
+    "test": "npx mocha"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3"
   },
