--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai-http": "^4.4.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
