Rota de login pelo post implementada

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-URL_CLUSTER =
-SECRET_KEY =
-DATABASE =
-EMAIL_TESTE =
-SENHA_TESTE =
+URL_CLUSTER = 'mongodb+srv://api115:api115@cluster0.1inmp9b.mongodb.net/?retryWrites=true&w=majority'
+SECRET_KEY = 'api_login'
+DATABASE = 'api-login'
+EMAIL_TESTE = 'teste@teste.com'
+SENHA_TESTE = '1234'
