--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "mocha": "^10.2.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
+    "pino": "^8.16.1",
+    "pino-http": "^8.5.0",
     "pm2": "^5.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.3"
   }
 }
