--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mocha": "^10.2.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
