--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mocha": "^10.2.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.5",
+    "nodemailer": "^6.9.7",
     "pino-http": "^8.5.0",
     "pm2": "^5.3.0",
     "swagger-jsdoc": "^6.2.8",
